--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -12,7 +12,4 @@ steps:
 - uses: actions/checkout@v4
 - uses: gautamkrishnar/blog-post-workflow@v1
 with:
-feed_list: "https://medium.com/feed/@akaanakbaik"
-
-gini? lalu
-
+feed_list: "https://medium.com/@khaliqarrasyidabdul"
