--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -1,15 +1,16 @@
 name: Latest blog post workflow
+
 on:
-schedule:
-- cron: '0 * * * *' # cek setiap 1 jam
-workflow_dispatch:
+  schedule:
+    - cron: '0 * * * *'  # setiap 1 jam
+  workflow_dispatch:
 
 jobs:
-update-readme-with-blog:
-name: Update this repo's README with latest blog posts
-runs-on: ubuntu-latest
-steps:
-- uses: actions/checkout@v4
-- uses: gautamkrishnar/blog-post-workflow@v1
-with:
-feed_list: "https://medium.com/@khaliqarrasyidabdul"
+  update-readme-with-blog:
+    name: Update this repo's README with latest blog posts
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: gautamkrishnar/blog-post-workflow@v1
+        with:
+          feed_list: "https://medium.com/feed/@khaliqarrasyidabdul"
